Thu Jul 23 02:11:02 CDT 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

	* CIAO version 0.7.2 released.

Wed Jul 22 08:06:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          NodeManager-Deployments is known to fail

Tue Jul 21 17:38:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/Dump_Obj.cpp:
        * tools/Config_Handlers/Dump_Obj.h:
          Moved include to header file to fix compile errors with CB2009

Tue Jul 21 13:48:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/XSCRT/Elements.hpp:
          Backported some CB2009 fixes

Tue Jul 21 10:51:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
          Fixed compile error on HPUX

Tue Jul 21 02:23:41 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/RedirectionServiceTest/RedirectionServiceTest.mpc:

          Avoids minimum corba.

Tue Jul 21 01:43:50 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/IDL3/ImpliedIDL/All/all.mpc:

           Disabled this on MFC systems due to the fact that it produces
           errors in newer VS compilers due to the mixing in of c# language
           elements.

Mon Jul 20 11:16:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
          Fixed compile error on HPUX

Mon Jul 20 11:13:53 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/NodeManager/Node_Manager_Module.cpp:
          Reverted an unicode change.

Mon Jul 20 10:55:13 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DAnCE/DomainApplicationManager/Node_Locator.h:
        * DAnCE/DomainApplicationManager/Node_Locator.cpp:
        * DAnCE/ExecutionManager/ExecutionManager_Module.h: