@@ -62,6 +62,9 @@ replacement in the near term:
 . Implement a planner to query the TargetManager and RepositoryManager
   and generate deployment plans on the fly.
 
+USER VISIBLE CHANGES BETWEEN CIAO-0.7.2 and CIAO-0.7.3
+=======================================================
+
 USER VISIBLE CHANGES BETWEEN CIAO-0.7.1 and CIAO-0.7.2
 =======================================================
 
